css/style.css
/*--- BASE ---*/
html {height: 100%; font-size: 85%; overflow-y: scroll; -webkit-text-size-adjust: 100%} /*--- Force scrollbar in non-IE and Remove iOS text size adjust without disabling user zoom ---*/
body {margin: 0; min-height: 100%; -webkit-font-smoothing:antialiased; font-smoothing:antialiased; text-rendering:optimizeLegibility; } /*--- Improve default text rendering, handling of kerning pairs and ligatures ---*/

/*--- HTML5 DECLARATIONS ---*/
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, dialog {display: block}
audio[controls],canvas,video {display: inline-block; *display: inline; zoom: 1}

/*--- DEFAULT FONT SETTINGS ---*/
/*--- 16px base font size with 150% (24px) friendly, unitless line height and margin for vertical rhythm ---*/
/*--- Font-size percentage is based on 16px browser default size ---*/
body, button, input, select, textarea {font: 100%/1.5 "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif; *font-size: 1em; color: #333} /*--- IE7 and older can't resize px based text ---*/
p, blockquote, q, pre, address, hr, code, samp, dl, ol, ul, form, table, fieldset, menu, img {margin: 0 0 1.5em; padding: 0}

/*--- TYPOGRAPHY ---*/
h1, h2, h3, h4, h5, h6 {font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;color:#222;text-shadow:1px 1px 1px rgba(0,0,0,.10)}
h1 {margin: 0; font-size: 1.5em; line-height: 1em; margin-bottom: 1em}
h2 {margin: 0; font-size: 1.3125 em; line-height: 1.1428571428571428571428571428571em; margin-bottom: 0.5em;
}
.projects-section h2 {visibility:hidden;display:none;}

.page-pse #content .g3 h2 {font-size: 1.325em;margin-bottom: 10px; }

.projects-section .headwrap h2 {visibility:visible !important;display:block;}

h2, h4, h5, h6 {margin: 0; font-size: 1.125em; line-height: 1.3333333333333333333333333333333em; margin-bottom: 1.3333333333333333333333333333333em}
p, ul, blockquote, pre, td, th, label {margin: 0; font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em} /*--- 16px / 24px ---*/
small, p.small {margin: 0; font-size: 0.875em; line-height: 1.7142857142857142857142857142857em; margin-bottom: 1.7142857142857142857142857142857em} /*--- 14px / 24px ---*/

/*--- CODE ---*/
pre {white-space: pre; white-space: pre-wrap; word-wrap: break-word} /*--- Allow line wrapping of the 'pre' ---*/
pre, code, kbd, samp {font-size: 1em; line-height: 1.5em; margin-bottom: 1.5em; font-family: Menlo, Consolas, 'DejaVu Sans Mono', Monaco, monospace}

/*--- TABLES ---*/
table {border-collapse: collapse; border-spacing: 0; margin-bottom: 1.5em}
th {text-align: left}
tr, th, td {padding-right: 1.5em; border-bottom: 0 solid #333}

/*--- FORMS ---*/
form {margin: 0 0 5em 0}
fieldset {border: 0;padding: 0}
textarea {overflow: auto; vertical-align: top}
legend {*margin-left: -.75em}
button, input, select, textarea {vertical-align: baseline; *vertical-align: middle} /*--- IE7 and older ---*/
button, input {line-height: normal; *overflow: visible}
button, input[type="button"], input[type="reset"], input[type="submit"] {cursor: pointer;-webkit-appearance: button}
input[type="checkbox"], input[type="radio"] {box-sizing: border-box}
input[type="search"] {-webkit-appearance: textfield; -moz-box-sizing: content-box; -webkit-box-sizing: content-box;     box-sizing: content-box}
input[type="search"]::-webkit-search-decoration {-webkit-appearance: none}
button::-moz-focus-inner, input::-moz-focus-inner {border: 0; padding: 0}

.location .form-item input {
  display: block;
  width: 95%;
  margin-bottom: 5px;
}

#login-links {display: inline;
  }
#login-message {
  padding-top: 10px;
  padding-bottom: 10px;
}
a#register-link.login-link, a#login-link.login-link {background:#4298A2;border:1px solid #e6e4e2;border-bottom-color:#bbb;border-right-color:#bbb;color:#000;font-size:1em;font-weight:500;padding:0.5em;margin:0em 0.5em 0 0;overflow:hidden;-moz-border-radius:4px;-webkit-border-radius:4px;border-radius:4px;color:#fff; letter-spacing: 1px;
}
a#register-link.login-link.It.active, a:hover#login-link.login-link {background:#027583;border:1px solid #e1dedb;border-bottom-color:#aaa;color:#fff;border-right-color:#aaa;cursor:pointer;}

/* @group Form Styles */

/*--- Form styling elements as a starter base and a few other elements for tidying ---*/

/* Fieldsets */
fieldset {
  border: solid 1px #e6e4e2;
  margin: 1.2em 0;
  padding: 0 0 1em 0.5em;
  position: relative;
}
.fieldset-wrapper {
  padding: 2.4em 1em 1em 1em;
}
.fieldset-description {
  padding: 1em 0;
}
html.js fieldset.collapsed {
  border: solid 1px #e6e4e2;
  height: 1.5em;
}
legend {
  display: block;
  color: #999;
  font-weight: bold;
  font-size: 0.923em;
  letter-spacing: 0.15em;
  line-height: normal;
}
legend a.fieldset-title {
  color: #999;
}
.js fieldset.collapsible legend a {
  padding-left: 20px;
  -moz-transition: color 0.3s linear;
  -webkit-transition: color 0.3s linear;
  transition: color 0.3s linear;
}
.js fieldset.collapsible legend a:hover,
.js fieldset.collapsible legend a:focus,
.js fieldset.collapsible legend a:active {
  color: #444;
}
.js fieldset.collapsed legend a {
 }

/* Labels */
label {
  cursor: pointer;
  font-weight: 500;
}
.form-item label {
  display: block;
  font-size: 1.077em;
  margin-bottom: 0.2em;
  margin-left: 3px;
}
.form-item .form-item label {
  display: inline;
  font-size: 1em;
}
table label,
.form-item label.option {
  display: inline;
  font-size: 1em;
  font-weight: normal;
}
select {
  margin-bottom: 3px;
  padding: 2px;
}

/* Wrappers */
.form-item {
  margin: 1.4em 0;
}
.fieldset-wrapper .form-item:first-child {
  margin-top: 0.4em;
}
.form-item .form-item {
  margin: 0.5em 0;
}
.form-type-checkbox,
.form-type-radio {
  margin: 1em 0;
}
.form-actions {
  margin-top: 1em;
  padding: 1em 0;
}
.filter-wrapper .fieldset-wrapper {
  padding: 0;
}
/* Elements */
input, select, textarea, button {
  font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
}
input, textarea {
  line-height: 1.3em;
}
/* ... */

